# translato

./: .gitignore  Makefile  autoCompile  c.spec  copyShimsWhenChanged  copySpecs  doit  generate.xsl  html.spec  install  parse.hs.lkshs  parse.hs.lkshw  parse.xsl  parseGrammar.ll  parseGrammar.yy  someUserAgents  split.l  stack.yaml  tokenStreamer.h  translato.lkshs  translato.lkshw  xml.spec
DOM/: DOM.cabal
DOM/src/: IsWidget.hs  List2Record.hs  TreeView.hs  WidgetModifiers.hs
e4x/: page.html
editor/: editor.cabal
editor/src/: ArgOpts.hs  Editor.hs  Main.hs
field-marshal/: field-marshal.cabal
field-marshal/src/: Convertable.hs  FieldMarshal.hs  HasBlankSlate.hs  Main.hs
html5/: e4x.xsl  html5.xsl
html5/GlowApp/: edit.bash  edit2.bash  icon.openIcon
html5/detailsSummary/: detailsSummary.css  detailsSummary.xsl  jquery.details.js
html5/shims/addBind/: CREDIT  config  trigger.xsl
html5/shims/addBind/lib/: bind.js
html5/shims/addColorPicker/: CREDIT  config  trigger.xsl
html5/shims/addColorPicker/lib/: jscolor.js
html5/shims/addCreateEvent/: translate.xsl  trigger.xsl
html5/shims/addDataList/: CREDIT  config  translate.xsl  trigger.xsl
html5/shims/addDataList/lib/: datalist.css  datalist.js
html5/shims/addDateInput/: config  trigger.xsl
html5/shims/addDateInput/lib/: epoch_classes.js
html5/shims/addE4x/: config  translate.xsl  trigger.xsl
html5/shims/addEventHandler/: config  translate.xsl
html5/shims/addEventHandler/lib/: addEventHandler.js
html5/shims/addGetElementRectangle/: config  translate.xsl
html5/shims/addGetElementRectangle/lib/: addGetElementRectangle.js
html5/shims/addPlaceholder/: CREDIT  config  translate.xsl
html5/shims/addPlaceholder/lib/: placeholders.js
html5/shims/addRangeInput/: config  translate.xsl  trigger.xsl
html5/shims/addRangeInput/lib/: addRangeInput.css  addRangeInput.js
html5/shims/addServerFunction/: config  translate.xsl  trigger.xsl
html5/shims/addServerFunction/lib/: serverFunction.js
html5/shims/addSpinner/: config  spinner.widget  translate.xsl
html5/shims/addTelInput/: config  translate.xsl  trigger.xsl
html5/shims/addTelInput/lib/: telephoneInput.css  telephoneInput.js
html5/shims/addTimeInput/: config  translate.xsl  trigger.xsl
html5/shims/addTimeInput/lib/: timeInput.css  timeInput.js
html5/shims/addTypedef/: config  translate.xsl  trigger.xsl
html5/shims/addValidation/: config  translate.xsl  trigger.xsl
html5/shims/addValidation/lib/: addValidation.css  addValidation.js
html5/shims/dataset/: CREDIT  config  trigger.xsl
html5/shims/dataset/lib/: dataset.js
html5/shims/detailsSummary/: config  details.widget  summary.widget  translate.xsl
html5/shims/detailsSummaryEvents/: config  details.widget  summary.widget  tranlsate.xsl  translate.xsl  widget2js.xsl
html5/shims/fixDefineProperty/: DESCRIPTION  config  test.html  translate.xsl  trigger.xsl
html5/shims/fixSlice/: config  translate.xsl  trigger.xsl
html5/shims/fixTagNameCaps/: DESCRIPTION  translate.xsl  trigger.xsl
html5/shims/progressbar/: CREDIT  config  progress.widget  translate.xsl  trigger.xsl
html5/xforms/: date.xsl
linux/: Makefile  break.c  break.h  css.cc  doit  flowbox.c  flowbox.h  html2c.xsl  widgets.cc
makeSpinner/: makeFrames.js  makeSpinner
parser/: compile  parser.cabal
parser.src/: parser.cabal
parser.src/resources/specs/: c.spec
parser.src/src/: ArgOpts.hs  Atom.hs  CT.hs  CharSet.hs  Colors.hs  Context.hs  DOM.hs  EStringTools.hs  ETreeTools.hs  Editor.hs  EnhancedString.hs  FakeColors.hs  FileEditView.hs  Format.hs  Generator.hs  Generator2.hs  Grammar.hs  GrammarNormalizer.hs  GrammarParser.hs  GrammarTools.hs  IsWidget.hs  JDebug.hs  LString.hs  LeftFactoring.hs  ListView.hs  Lookahead.hs  Main.hs  ManyWorldsParser.hs  Menu.hs  OperatorNames.hs  Parse2.hs  ParseElements.hs  ParseError.hs  Parser.hs  Parser2.hs  Parser3.hs  Parser4.hs  Quoter.hs  SMShower.hs  SequenceMap.hs  (+10 more)
parser.src/src/FromGtk2Hs/: Signals.chs  Threading.hs  Threading.hs~
parser/resources/: builtins.spec
parser/resources/specs/: css.spec  e4x.spec  html.spec  html5.spec  js.spec  regex.spec  xml.spec
parser/src/: ArgOpts.hs  CharSet.hs  CmdOptions.hs  Context.hs  EStringTools.hs  Editor.hs  Editor2.hs  EnhancedString.hs  ExpressionMatcher.hs  FileEditView.hs  GValue.hs  Generator.hs  Grammar.hs  GrammarParser.hs  GrammarTools.hs  IsWidget.hs  JDebug.hs  LString.hs  LText.hs  LeftFactoring.hs  Lookahead.hs  Main.hs  OperatorNames.hs  OutputParser.hs  ParseElements.hs  ParseError.hs  Parser.hs  RecordTypes.hs  SMShower.hs  SequenceMap.hs  SequenceTools.hs  Shower.hs  StupidSetGet.hs  ToolBar.hs  WidgetRegister.hs  WidgetSizes.chs
samples/: sample.html
samples/html/: image.html  ol.html  simple.html  table.html  ul.html
samples/html5/: addEventListener.html5  audio.html  audio.html5  browserSupport.html5  colorpicker.html5  datalist.html5  dataset.html5  date.html  datetime.html  datetime.html5  detailssummary.html  detailssummary.html5  detailssummary2.html5  e4x.html5  placeholder.html  placeholder.html5  progressbar.html  progressbar.html5  rangeinput.html  rangeinput.html5  sample1.html  sample1.html5  telephoneinput.html  telephoneinput.html5  time.html  time.html5  validation.html5  video.html  video.html5
samples/parser/: e4xSample.html  sample.c  sample.xml
specs/: html.spec
translato/: translato.cabal
translato/resources/: config.spec  reorganize.xsl  widget2js.xsl
translato/src/: BrowserTools.hs  Format.hs  LibContent.hs  LibContentMain.hs  Libs.hs  Main.hs  Merger.hs  MergerMain.hs  ProgDirs.hs  Reorganizer.hs  ReorganizerMain.hs  ShimConfig.hs  ShimLibs.hs  Shims.hs  Test.hs  Translator.hs  UserAgentTools.hs  Widget.hs  WidgetConfig.hs  WidgetFormatter.hs  WidgetJSLibrary.hs  WidgetLibGenerator.hs  WidgetLibGeneratorMain.hs  WidgetMerger.hs  WidgetParser.hs
xx/: Makefile  commands.cc  doit  js2c.xx  js2c2.xsl  test.js  xform.cc  xform_g.cc  xform_g.orig.cc  xform_g.xsl  xx.spec  xxcomp  xxproc
xx/share/: uniqueLabel.cc  xform.cc
(+4 files in other folders)
