name: DOM
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
library
    build-depends: base -any, containers -any, gtk -any, glib -any,
                   case-insensitive -any
    exposed-modules: DOM FromGtk2Hs.Threading ListView Menu ToolBar
                     TreeView WidgetModifiers
    exposed: True
    buildable: True
    hs-source-dirs: src
 