name: DOM
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description:  
data-dir: ""
 
library
    build-depends: base -any, case-insensitive -any, containers -any,
                   glib -any, gtk -any, template-haskell -any
    exposed-modules: DOM FromGtk2Hs.Threading IsWidget List2Record
                     ListView Menu ToolBar TreeView WidgetModifiers
                     WidgetSizes FromGtk2Hs.Signals
    exposed: True
    buildable: True
    hs-source-dirs: src
 