name: parser
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-files: greenBall.png redBall.png
data-dir: resources
extra-source-files: ""
 
executable parser
    build-depends: base -any, bytestring -any, case-insensitive -any,
                   containers -any, fgl -any, filepath -any, glib -any, gtk -any,
                   lens -any, mtl -any, parsec -any, regex-compat -any,
                   regex-posix -any, system-filepath -any, template-haskell -any,
                   text -any, utf8-string -any, xml-conduit -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: SequenceMap Lookahead ArgOpts LText StupidSetGet
                   Editor LString ToolBar Main ListView CharSet ParseElements
                   Generator ParseError TreeTools Quoter Editor2 Format Grammar
                   OperatorNames FakeColors CmdOptions Generator SMShower JDebug
                   Colors List2Record GrammarParser TreeView Shower Menu EStringTools
                   Context GrammarTools IsWidget EnhancedString DOM XPath Parser
                   LeftFactoring
 
test-suite test-parser
    build-depends: base -any, bytestring -any, case-insensitive -any,
                   containers -any, fgl -any, filepath -any, glib -any, gtk -any,
                   lens -any, mtl -any, parsec -any, regex-compat -any,
                   regex-posix -any, system-filepath -any, template-haskell -any,
                   text -any, utf8-string -any, xml-conduit -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src