name: parser
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-files: greenBall.png redBall.png specs/html.spec specs/js.spec 
	    specs/css.spec specs/html5.spec specs/c.spec specs/xml.spec
	    builtins.spec
data-dir: resources
extra-source-files: ""
 
library
    build-depends: DOM -any, base -any, bindings-gobject -any,
                   bytestring -any, case-insensitive -any, containers -any,
                   directory -any, fgl -any, field-marshal -any, filepath -any,
                   glib -any, gtk -any, lens -any, missing-foreign -any, mtl -any,
                   parsec -any, regex-compat -any, regex-posix -any,
                   system-filepath -any, template-haskell -any, text -any,
                   transformers -any, utf8-string -any, xml-conduit -any
    exposed-modules: ArgOpts CharSet Colors EStringTools EnhancedString
                     Grammar GrammarParser GrammarTools LString LeftFactoring Lookahead
                     OperatorNames ParseError Parser SequenceMap SequenceTools TreeTools 
                     Paths_parser
    exposed: True
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
 
executable parser
    build-depends: DOM -any, base -any, bindings-gobject -any,
                   bytestring -any, case-insensitive -any, containers -any,
                   directory -any, fgl -any, field-marshal -any, filepath -any,
                   glib -any, gtk -any, lens -any, missing-foreign -any, mtl -any,
                   parsec -any, regex-compat -any, regex-posix -any,
                   system-filepath -any, template-haskell -any, text -any,
                   transformers -any, utf8-string -any, xml-conduit -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: ArgOpts OperatorNames WidgetRegister SequenceMap OutputParser
                   JDebug Grammar Colors FakeColors Parser Editor RecordTypes SMShower
                   Editor2 FileEditView Lookahead Format LString Main GrammarParser
                   ParseError EnhancedString EStringTools Shower CharSet GValue
                   Generator ParseElements LeftFactoring GrammarTools TreeTools
                   SequenceTools