name: parser
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description:  
data-files: specs/html.spec specs/js.spec 
	    specs/css.spec specs/html5.spec specs/c.spec specs/xml.spec
            specs/regex.spec specs/e4x.spec
	    builtins.spec
data-dir: resources
extra-source-files: ""
 
library
    build-depends: DOM -any, base -any, bindings-gobject -any,
                   bytestring -any, case-insensitive -any, containers -any,
                   directory -any, fgl -any, field-marshal -any, filepath -any,
                   glib -any, gtk -any, lens -any, missing-foreign -any, 
                   mtl -any, parsec -any, regex-compat -any, regex-posix -any,
                   system-filepath -any, template-haskell -any, text -any,
                   transformers -any, utf8-string -any, xml-conduit -any
    exposed-modules: ArgOpts CharSet Colors EStringTools EnhancedString
                     Generator
                     Grammar GrammarParser GrammarTools LString LeftFactoring 
                     Lookahead OperatorNames ParseError Parser SequenceMap 
                     SequenceTools TreeTools ExpressionMatcher
                     Paths_parser
    exposed: True
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
 
executable parser
    build-depends: DOM -any, base -any, bindings-gobject -any,
                   bytestring -any, case-insensitive -any, containers -any,
                   directory -any, fgl -any, field-marshal -any, filepath -any,
                   glib -any, gtk -any, lens -any, missing-foreign -any, 
                   mtl -any, parsec -any, regex-compat -any, regex-posix -any,
                   system-filepath -any, template-haskell -any, text -any,
                   transformers -any, utf8-string -any, xml-conduit -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: ArgOpts OperatorNames SequenceMap 
                   OutputParser JDebug Grammar Colors FakeColors Parser 
                   RecordTypes SMShower Lookahead 
                   Format LString Main GrammarParser ParseError EnhancedString 
                   EStringTools Shower CharSet Generator ParseElements 
                   LeftFactoring GrammarTools TreeTools SequenceTools 
                   ExpressionMatcher