name: translato
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
data-files: config.spec reorganize.xsl widget2js.xsl
data-dir: resources
 
library
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2,
                   parser -any
    exposed-modules: WidgetLibGenerator Translator
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter WidgetConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger Paths_translato
                   Reorganizer Shims LibContent
 
executable testTranslato
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2
    main-is: Test.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter WidgetConfig MergerMain
                   Translator
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable translato
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2,
                   cmdargs -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter WidgetConfig MergerMain
                   Translator Reorganizer
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable mergo
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2
    main-is: Merger.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter WidgetConfig MergerMain
                   Translator
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable generateWidgetLibs
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2
    main-is: WidgetLibGeneratorMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter WidgetConfig MergerMain
                   Translator
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable reorganizo
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2,
                   data-default -any, directory-tree -any
    main-is: ReorganizerMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Reorganizer LibContent

executable libo
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser >=0.3 && <0.4, resourcet >=0.4.9 && <0.5,
                   conduit >=1.0.9.3 && <1.1, xml-picklers >=0.3.4 && <0.4,
                   MissingH >=1.2.0.2 && <1.3, QuickCheck -any,
                   aeson >=0.6.2.1 && <0.7, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process >=1.2.0.0 && <1.3,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit >=1.1.0.9 && <1.2,
                   data-default -any, directory-tree -any
    main-is: LibContentMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: LibContent
