name: translato
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
data-files: config.spec reorganize.xsl widget2js.xsl
data-dir: resources
 
library
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser -any, resourcet -any,
                   conduit -any, xml-picklers >=0.3.4 && <0.4,
                   QuickCheck -any,
                   aeson -any, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process -any,
                   text -any, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit -any,
                   parser -any
    exposed-modules:LibContent
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger Paths_translato
                   Reorganizer Shims WidgetLibGenerator Libs BrowserTools
                   ShimLibs
 
executable translato
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser -any, resourcet -any,
                   conduit -any, xml-picklers >=0.3.4 && <0.4,
                   QuickCheck -any,
                   aeson -any, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process -any,
                   text -any, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit -any,
                   cmdargs -any, either -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Reorganizer UserAgentTools Libs
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable mergo
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser -any, resourcet -any,
                   conduit -any, xml-picklers >=0.3.4 && <0.4,
                   QuickCheck -any,
                   aeson -any, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process -any,
                   text -any, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit -any
    main-is: Merger.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable generateWidgetLibs
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser -any, resourcet -any,
                   conduit -any, xml-picklers >=0.3.4 && <0.4,
                   QuickCheck -any,
                   aeson -any, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process -any,
                   text -any, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit -any
    main-is: WidgetLibGeneratorMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable libo
    build-depends: void >=0.6.1 && <0.7, xml-types >=0.3.4 && <0.4,
                   ua-parser -any, resourcet -any,
                   conduit -any, xml-picklers >=0.3.4 && <0.4,
                   QuickCheck -any,
                   aeson -any, base -any, bytestring >=0.10.0.2 && <0.11,
                   containers >=0.5.0.0 && <0.6, directory >=1.2.0.1 && <1.3,
                   filemanip >=0.3.6.2 && <0.4, filepath >=1.3.0.1 && <1.4,
                   json >=0.7 && <0.8, parser -any, process -any,
                   text -any, transformers >=0.3.0.0 && <0.4,
                   utf8-string >=0.3.7 && <0.4, xml-conduit -any,
                   data-default -any, directory-tree -any
    main-is: LibContentMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: LibContent UserAgentTools
