name: translato
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
data-files: config.spec reorganize.xsl widget2js.xsl
data-dir: resources
 
library
    build-depends: void -any, xml-types -any,
                   ua-parser -any, resourcet -any,
                   conduit -any,
                   aeson -any, base -any, bytestring -any,
                   containers -any, directory -any,
                   filemanip -any, filepath -any,
                   json -any, parser -any, process -any,
                   text -any, transformers -any,
                   utf8-string -any, xml-conduit -any,
                   parser -any
    exposed-modules:LibContent
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger Paths_translato
                   Reorganizer Shims WidgetLibGenerator Libs BrowserTools
                   ShimLibs
 
executable translato
    build-depends: void -any, xml-types -any,
                   ua-parser -any, resourcet -any,
                   conduit -any,
                   aeson -any, base -any, bytestring -any,
                   containers -any, directory -any,
                   filemanip -any, filepath -any,
                   json -any, parser -any, process -any,
                   text -any, transformers -any,
                   utf8-string -any, xml-conduit -any,
                   cmdargs -any, either -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Reorganizer UserAgentTools Libs
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable mergo
    build-depends: void -any, xml-types -any,
                   ua-parser -any, resourcet -any,
                   conduit -any,
                   aeson -any, base -any, bytestring -any,
                   containers -any, directory -any,
                   filemanip -any, filepath -any,
                   json -any, parser -any, process -any,
                   text -any, transformers -any,
                   utf8-string -any, xml-conduit -any
    main-is: Merger.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable generateWidgetLibs
    build-depends: void -any, xml-types -any,
                   ua-parser -any, resourcet -any,
                   conduit -any,
                   aeson -any, base -any, bytestring -any,
                   containers -any, directory -any,
                   filemanip -any, filepath -any,
                   json -any, parser -any, process -any,
                   text -any, transformers -any,
                   utf8-string -any, xml-conduit -any
    main-is: WidgetLibGeneratorMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: WidgetParser WidgetFormatter ShimConfig MergerMain
                   Widget WidgetJSLibrary Format WidgetMerger WidgetLibGenerator
 
executable libo
    build-depends: void -any, xml-types -any,
                   ua-parser -any, resourcet -any,
                   conduit -any,
                   aeson -any, base -any, bytestring -any,
                   containers -any, directory -any,
                   filemanip -any, filepath -any,
                   json -any, parser -any, process -any,
                   text -any, transformers -any,
                   utf8-string -any, xml-conduit -any,
                   data-default -any, directory-tree -any
    main-is: LibContentMain.hs
    buildable: True
    hs-source-dirs: src
    other-modules: LibContent UserAgentTools
